Update all files and adding typography and logo

--- a/root/about.html
+++ b/root/about.html
@@ -57,6 +57,9 @@
                     <p>After earning my Bachlor degree in Software-Engineering from Sudan University, I entered the Programming world to explore my passion for Software, Programming languages, and Designing. Currently, I work as an Odoo developer for App-script, where I'm focused on software production, solving technical problems, and team play. Further more I work as a front-end developer freelancer to deliver incredible websites.
                     </p>
                 </div>
+                <div class="header-cue">
+                    <i class="header-cue-icon fas fa-chevron-down"></i>
+                </div>
             </div>
 
             <!-- ************** JOBS SECTION *************** -->
@@ -64,16 +67,16 @@
 
             <div class="social-icons">
                 <a href="https://twitter.com/foola_sust">
-                    <i class="fab fa-twitter fa-2x"></i>
+                    <i class="fab fa-twitter "></i>
                 </a>
                 <a href="https://web.facebook.com/abdalla.abdalmunim">
-                    <i class="fab fa-facebook fa-2x"></i>
+                    <i class="fab fa-facebook "></i>
                 </a>
                 <a href="https://www.instagram.com/abdo_foola/">
-                    <i class="fab fa-instagram fa-2x"></i>
+                    <i class="fab fa-instagram "></i>
                 </a>
                 <a href="https://github.com/abdofola?tab=repositories">
-                    <i class="fab fa-github fa-2x"></i>
+                    <i class="fab fa-github "></i>
                 </a>
             </div><!--.social-icons -->
 
