--- a/root/contact.html
+++ b/root/contact.html
@@ -43,7 +43,7 @@
                         Contact Me
                     </a>
                 </li>
-            </ul>
+            </ul><!-- .menu-nav -->
         </nav><!-- .nav -->
     </header>
 
@@ -52,34 +52,34 @@
         <section class="contact">
             <H2>Contact Me..</H2>
             <div class="contact__list">
-                <div class="contact__email">
+                <address class="contact__email">
                     <i class="fas fa-envelope"></i> Email
-                    <div class="text-secondary">abdofola67@gmail.com</div>
-                </div>
-                <div class="contact__phone">
+                    <a href="mailto:abdofola67@gmail.com"  class="text-secondary">abdofola67@gmail.com</a>
+                </address>
+                <address class="contact__phone">
                     <i class="fas fa-mobile-alt"></i> Phone
                     <div class="text-secondary">+249908608183</div>
-                </div>
-                <div class="contact__address">
+                </address>
+                <address class="contact__address">
                     <i class="far fa-address-card"></i> Address
                     <div class="text-secondary">khartoum-Bahri-alkhatmyia</div>
-                </div>
+                </address>
             </div><!--.contact__list -->
                 
 
             <!-- ************ SOCIAL ICONS ************* -->
             <div class="social-icons">
                 <a href="https://twitter.com/foola_sust">
-                    <i class="fab fa-twitter fa-2x"></i>
+                    <i class="fab fa-twitter "></i>
                 </a>
                 <a href="https://web.facebook.com/abdalla.abdalmunim">
-                    <i class="fab fa-facebook fa-2x"></i>
+                    <i class="fab fa-facebook "></i>
                 </a>
                 <a href="https://www.instagram.com/abdo_foola/">
-                    <i class="fab fa-instagram fa-2x"></i>
+                    <i class="fab fa-instagram "></i>
                 </a>
                 <a href="https://github.com/abdofola?tab=repositories">
-                    <i class="fab fa-github fa-2x"></i>
+                    <i class="fab fa-github "></i>
                 </a>
             </div><!--.social-icons -->
 
