--- a/root/projects.html
+++ b/root/projects.html
@@ -126,16 +126,16 @@
             <!-- ************ SOCIAL ICONS ************* -->
             <div class="social-icons">
                 <a href="https://twitter.com/foola_sust">
-                    <i class="fab fa-twitter fa-2x"></i>
+                    <i class="fab fa-twitter"></i>
                 </a>
                 <a href="https://web.facebook.com/abdalla.abdalmunim">
-                    <i class="fab fa-facebook fa-2x"></i>
+                    <i class="fab fa-facebook"></i>
                 </a>
                 <a href="https://www.instagram.com/abdo_foola/">
-                    <i class="fab fa-instagram fa-2x"></i>
+                    <i class="fab fa-instagram"></i>
                 </a>
                 <a href="https://github.com/abdofola?tab=repositories">
-                    <i class="fab fa-github fa-2x"></i>
+                    <i class="fab fa-github"></i>
                 </a>
             </div><!--.social-icons -->
 
