--- a/root/index.html
+++ b/root/index.html
@@ -25,23 +25,23 @@
         </div>
         <nav class="nav">
             <ul class="menu-nav">
-                <li class="menu-nav__item active" >
-                    <a href="#home" data-id="home" class="menu-nav__link">
+                <li data-id="home" class="menu-nav__item active" >
+                    <a href="#home"  class="menu-nav__link">
                         Home
                     </a>
                 </li>
-                <li class="menu-nav__item" >
-                    <a href="#about" data-id="about" class="menu-nav__link">
+                <li data-id="about" class="menu-nav__item" >
+                    <a href="#about"  class="menu-nav__link">
                         About Me
                     </a>
                 </li>
-                <li class="menu-nav__item" >
-                    <a href="#projects" data-id="projects" class="menu-nav__link">
+                <li data-id="projects" class="menu-nav__item" >
+                    <a href="#projects"  class="menu-nav__link">
                         My Projects
                     </a>
                 </li>
-                <li class="menu-nav__item" >
-                    <a href="#contact" data-id="contact" class="menu-nav__link">
+                <li data-id="contact" class="menu-nav__item" >
+                    <a href="#contact"  class="menu-nav__link">
                         Contact Me
                     </a>
                 </li>
