Upate setting.json

--- a/root/index.html
+++ b/root/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="This my second version of portfolio build with pure css(using sass) & js">
      
     <!-- ************ MY CSS ************** -->
-     <link rel="stylesheet" href="css/style.css">
+     <link rel="stylesheet" href="css/main.css">
 
      <!-- ************ MY JS ************** -->
      <script type="module" src="js/main.js"></script>
