Test mobile bttom nav

--- a/root/index.html
+++ b/root/index.html
@@ -24,25 +24,26 @@
             <img src="img/fola1.png" alt="logo of fola">
         </div>
         <nav class="nav">
+            <a class="sc-nav-indicator"></a>    
             <ul class="menu-nav">
-                <li  class="menu-nav__item active" >
-                    <a href="#home" data-id="home" class="menu-nav__link">
-                        Home
+                <li  class="menu-nav__item active sc-current" >
+                    <a href="#home"  class="menu-nav__link ">
+                        <i data-id="home" class="fas fa-home"></i>
                     </a>
                 </li>
                 <li  class="menu-nav__item" >
                     <a href="#about" data-id="about" class="menu-nav__link">
-                        About Me
+                        <i data-id="about" class="fas fa-atlas"></i>
                     </a>
                 </li>
                 <li  class="menu-nav__item" >
-                    <a href="#projects" data-id="projects" class="menu-nav__link">
-                        My Projects
+                    <a href="#projects"  class="menu-nav__link">
+                        <i data-id="projects" class="fas fa-tasks"></i>
                     </a>
                 </li>
                 <li  class="menu-nav__item" >
-                    <a href="#contact" data-id="contact" class="menu-nav__link">
-                        Contact Me
+                    <a href="#contact"  class="menu-nav__link">
+                        <i data-id="contact" class="fas fa-id-card-alt"></i>
                     </a>
                 </li>
             </ul><!-- .menu-nav -->
@@ -51,7 +52,7 @@
 
     <main>
         <!-- ************* HOME ************** -->
-        <section id="home" class="home ">
+        <section id="home" class="home active">
             <div class="home__wrapper">
                 <div class="left">
                     <h2>Hi! my name is</h2>
