Styling projects page in regards to the different viewports

--- a/root/index.html
+++ b/root/index.html
@@ -124,77 +124,86 @@
 
         <!-- ************* PROJECTS ************** -->
         <section id="projects" class="projects">
-            <div class="projects__bio-image">
+            <div class="projects__header">
                 <h1 class="text-secondary">My Projects</h1>
-            </div>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, ratione.</p>
+            </div><!-- .projects__header -->
+
             <div class="projects__items">
                 <div class="projects__item">
+                    <div class="projects__item__header">
+                        <span class="projects__item__header--red"></span>
+                        <span class="projects__item__header--yellow"></span>
+                        <span class="projects__item__header--green"></span>
+                        <span>faceook clone</span> 
+                    </div><!-- .projects__item__header -->
                     <img src="img/project-1.png" alt="My project">
-                    <div class="projects__btns">
-                        <a href="#!" class="projects__btn">
-                            <i class="fas fa-eye"></i> Preview
-                        </a>
-                        <a href="#!" class="projects__btn">
-                            <i class="fab fa-github"></i> Githb
-                        </a>
+                    <div class="projects__btn">
+                        <a href="#!" >more..</a>
                     </div>
-                </div>
+                </div><!-- .projects__item-->
                 <div class="projects__item">
+                    <div class="projects__item__header">
+                        <span class="projects__item__header--red"></span>
+                        <span class="projects__item__header--yellow"></span>
+                        <span class="projects__item__header--green"></span>
+                        <span>faceook clone</span> 
+                    </div><!-- .projects__item__header -->
                     <img src="img/project-1.png" alt="My project">
-                    <div class="projects__btns">
-                        <a href="#!" class="projects__btn">
-                            <i class="fas fa-eye"></i> Preview
-                        </a>
-                        <a href="#!" class="projects__btn">
-                            <i class="fab fa-github"></i> Githb
-                        </a>
+                    <div class="projects__btn">
+                        <a href="#!" >more..</a>
                     </div>
-                </div>
+                </div><!-- .projects__item-->
                 <div class="projects__item">
+                    <div class="projects__item__header">
+                        <span class="projects__item__header--red"></span>
+                        <span class="projects__item__header--yellow"></span>
+                        <span class="projects__item__header--green"></span>
+                        <span>faceook clone</span> 
+                    </div><!-- .projects__item__header -->
                     <img src="img/project-2.png" alt="My project">
-                    <div class="projects__btns">
-                        <a href="#!" class="projects__btn">
-                            <i class="fas fa-eye"></i> Preview
-                        </a>
-                        <a href="#!" class="projects__btn">
-                            <i class="fab fa-github"></i> Githb
-                        </a>
+                    <div class="projects__btn">
+                        <a href="#!" >more..</a>
                     </div>
-                </div>
+                </div><!-- .projects__item-->
                 <div class="projects__item">
+                    <div class="projects__item__header">
+                        <span class="projects__item__header--red"></span>
+                        <span class="projects__item__header--yellow"></span>
+                        <span class="projects__item__header--green"></span>
+                        <span>faceook clone</span> 
+                    </div><!-- .projects__item__header -->
                     <img src="img/project-3.png" alt="My project">
-                    <div class="projects__btns">
-                        <a href="#!" class="projects__btn">
-                            <i class="fas fa-eye"></i> Preview
-                        </a>
-                        <a href="#!" class="projects__btn">
-                            <i class="fab fa-github"></i> Githb
-                        </a>
+                    <div class="projects__btn">
+                        <a href="#!" >more..</a>
                     </div>
-                </div>
+                </div><!-- .projects__item-->
                 <div class="projects__item">
+                    <div class="projects__item__header">
+                        <span class="projects__item__header--red"></span>
+                        <span class="projects__item__header--yellow"></span>
+                        <span class="projects__item__header--green"></span>
+                        <span>faceook clone</span> 
+                    </div><!-- .projects__item__header -->
                     <img src="img/project-4.png" alt="My project">
-                    <div class="projects__btns">
-                        <a href="#!" class="projects__btn">
-                            <i class="fas fa-eye"></i> Preview
-                        </a>
-                        <a href="#!" class="projects__btn">
-                            <i class="fab fa-github"></i> Githb
-                        </a>
+                    <div class="projects__btn">
+                        <a href="#!" >more..</a>
                     </div>
-                </div>
+                </div><!-- .projects__item-->
                 <div class="projects__item">
+                    <div class="projects__item__header">
+                        <span class="projects__item__header--red"></span>
+                        <span class="projects__item__header--yellow"></span>
+                        <span class="projects__item__header--green"></span>
+                        <span>faceook clone</span> 
+                    </div><!-- .projects__item__header -->
                     <img src="img/project-5.png" alt="My project">
-                    <div class="projects__btns">
-                        <a href="#!" class="projects__btn">
-                            <i class="fas fa-eye"></i> Preview
-                        </a>
-                        <a href="#!" class="projects__btn">
-                            <i class="fab fa-github"></i> Githb
-                        </a>
+                    <div class="projects__btn">
+                        <a href="#!" >more..</a>
                     </div>
-                </div>
+                </div><!-- .projects__item-->
             </div><!-- .projects__items -->
+
             <div class="social-icons">
                 <a href="https://twitter.com/foola_sust">
                     <i class="fab fa-twitter"></i>
@@ -209,7 +218,9 @@
                     <i class="fab fa-github"></i>
                 </a>
             </div><!--.social-icons -->
+
             <footer>&copy; Copyright </footer>
+        
         </section><!-- .projects -->
 
          <!-- ************* CONTACT ************** -->
