Testing project detials pages

--- a/root/project-boom.html
+++ b/root/project-boom.html
@@ -22,7 +22,7 @@
             <div class="article__header">
                 <!-- code injected by js -->
                 <p>Down below screenshots taken from the project.</p>
-                <a href="http://www.app-script.com">live demo</a>
+                <a href="http://www.boomconsultancy.net">live demo</a>
             </div><!-- .article__header -->
             <div class="article__body">
                 <figure class="slideshow">
