Add more project pages

--- a/root/project-facebook.html
+++ b/root/project-facebook.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <script type="module" src="./js/projectMain.js"></script>
 
-    <title>boom projdect</title>
+    <title>facebook projdect</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
             <div class="article__header">
                 <!-- code injected by js -->
                 <p>Down below screenshots taken from the project.</p>
-                <a href="http://www.boomconsultancy.net">live demo</a>
+                <a href="#">live demo</a>
             </div><!-- .article__header -->
             <div class="article__body">
                 <figure class="slideshow">
