--- a/root/index.html
+++ b/root/index.html
@@ -98,13 +98,16 @@
                     
                     <div class="about__bio">
                         <h2 class="text-secondary">BIO</h2>
-                        <p>After earning my Bachlor degree in Software-Engineering from Sudan University, I entered the Programming world to explore my passion for Software, Programming languages, and Designing. Currently, I work as an Odoo developer for App-script, where I'm focused on software production, solving technical problems, and team play. Further more I work as a front-end developer freelancer to deliver incredible websites.
+                        <p>After earning my Bachlor degree in Software-Engineering from Sudan University, I entered the Programming world
+                             to explore my passion for Software, Programming languages, and Designing. Currently, I work as an Odoo developer for
+                              App-script, where I'm focused on software production, solving technical problems, and team play.
+                               Further more I work as a front-end developer freelancer to deliver incredible websites.
                         </p>
+                        <div class="header-cue">
+                            <i class="header-cue__icon far fa-hand-point-down"></i>
+                            <p class="header-cue__cap">scroll down</p> 
+                        </div><!-- .header-cue -->
                     </div><!-- .about__bio -->
-                    <div class="header-cue">
-                        <i class="header-cue__icon far fa-hand-point-down"></i>
-                        <p class="header-cue__cap">scroll down</p> 
-                    </div><!-- .header-cue -->
 
                 </div><!-- .about__bio-image -->
     
