Add quick btn to navigate to projects from home on mobile view

--- a/root/index.html
+++ b/root/index.html
@@ -36,7 +36,7 @@
                 <li  class="menu-nav__item" >
                     <a href="#about" data-id="about" class="menu-nav__link">
                         <span data-id="about">about</span>
-                        <i data-id="about" class="fas fa-atlas"></i>
+                        <i data-id="about" class="fas fa-user-tie"></i> 
                     </a>
                 </li>
                 <li  class="menu-nav__item" >
@@ -48,7 +48,7 @@
                 <li  class="menu-nav__item" >
                     <a href="#contact"  class="menu-nav__link">
                         <span data-id="contact">contact</span>
-                        <i data-id="contact" class="fas fa-id-card-alt"></i>
+                        <i data-id="contact" class="fas fa-link"></i>
                     </a>
                 </li>
             </ul><!-- .menu-nav -->
@@ -67,7 +67,8 @@
                             <span class="home__name--last">Fola</span>
                         </h1>
                         <h2>Web Developer, Designer & Programmer</h2>
-                        <a href="#contact" data-id="contact" class="btn test">let's connect</a>
+                        <a href="#contact" data-id="contact" class="btn btn--contact">let's connect</a>
+                        <a href="#projects" data-id="projects" class="btn btn--projects">see projects</a>
                     </div><!-- .left -->
                     <div class="right">
                         <div class="border-back"></div>
@@ -103,7 +104,7 @@
                               App-script, where I'm focused on software production, solving technical problems, and team play.
                                Further more I work as a front-end developer freelancer to deliver incredible websites.
                         </p>
-                        <div class="header-cue">
+                        <div class="header-cue" id="cue">
                             <i class="header-cue__icon far fa-hand-point-down"></i>
                             <p class="header-cue__cap">scroll down</p> 
                         </div><!-- .header-cue -->
@@ -165,17 +166,27 @@
              <section id="contact" class="contact">
                 <H2>Contact Me..</H2>
                 <div class="contact__list">
-                    <address class="contact__email">
-                        <i class="fas fa-envelope"></i> Email
-                        <a href="mailto:abdofola67@gmail.com">abdofola67@gmail.com</a>
-                    </address>
-                    <address class="contact__phone">
-                        <i class="fas fa-mobile-alt"></i> Phone
-                        <div>+249908608183</div>
+                    <address class="contact__address">
+                        <i class="fas fa-envelope"></i>
+                        <div>
+                            <span>Email</span> 
+                            <a href="mailto:abdofola67@gmail.com">abdofola67@gmail.com</a>
+                        </div>
                     </address>
                     <address class="contact__address">
-                        <i class="far fa-address-card"></i> Address
-                        <div>khartoum-Bahri-alkhatmyia</div>
+                        <i class="fas fa-phone-alt"></i>            
+                        <div>
+                            <span>Phone</span>
+                            <span>+249908608183</span>
+                        </div>
+                    </address>
+                    <address class="contact__address">
+                        <i class="far fa-address-card"></i> 
+                        <div>
+                            <span>Address</span>
+                            <span>khartoum - Bahri</span>
+                        </div>  
+
                     </address>
                 </div><!--.contact__list -->
                 <div class="social-icons">
