--- a/root/project-drumkit.html
+++ b/root/project-drumkit.html
@@ -49,7 +49,7 @@
             <footer class="article__footer">
                 <h4>Let's talk</h4>
                 <p>Wanna get in touch or talk about a project ?</p>
-                <p>Feel free to contact me via email or drop me a line here <a href="index.html#contact">contact
+                <p>Feel free to contact me via email or drop me a line here <a id="contact" href="index.html#contact">contact
                         page</a></p>
             </footer><!-- .article__footer -->
         </article><!-- .article -->
