--- a/root/index.html
+++ b/root/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is Abdallah's portfolio, a Software-Engineer based in Sudan. this project built with pure html, css(using sass preproccessor) & vanilla javascript">
      
+    <!-- favicon -->
+    <link rel="icon" href="./img/fola.png" type="image/png" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+
     <!-- ************ MY CSS ************** -->
      <link rel="stylesheet" href="css/main.css">
 
