--- a/root/project-boom.html
+++ b/root/project-boom.html
@@ -5,7 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- favicon -->
+    <link rel="icon" href="./img/fola.png" type="image/png" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    
+    <!-- ********* MY STYLESHEET ********* -->
     <link rel="stylesheet" href="./css/main.css">
+
+    <!-- ********* MY JS ********* -->
     <script type="module" src="./js/projectMain.js"></script>
 
     <title>boom projdect</title>
