test safari compatibility

--- a/root/index.html
+++ b/root/index.html
@@ -22,9 +22,9 @@
 
 <body>
     <header>
-        <div class="menu-btn">
+        <!-- <div class="menu-btn">
             <span class="menu-btn__burger"></span>
-        </div>
+        </div> -->
         <div class="logo">
             <img src="img/fola1.png" alt="logo of fola">
         </div>
