test sfarai compatability -- 6

--- a/root/index.html
+++ b/root/index.html
@@ -29,9 +29,9 @@
     </div>
 
     <header style="display: none;">
-        <div class="logo">
-            <img src="img/fola1.png" alt="logo of fola">
-        </div>
+        <a  class="logo">
+            <img data-id="home" src="img/fola1.png" alt="logo of fola">
+        </a>
         <nav class="nav">
             <ul class="menu-nav">
                 <a class="sc-nav-indicator"></a>    
@@ -98,7 +98,6 @@
                         <i class="fab fa-github"></i>
                     </a>
                 </div><!--.social-icons -->
-                <!-- <footer>&copy; Copyright </footer>   -->
             </section><!--.home-->
     
             <!-- ************* ABOUT ************** -->
