test sfarai compatability -- 8

--- a/root/project-appscript.html
+++ b/root/project-appscript.html
@@ -29,7 +29,7 @@
 
     <header class="menu" style="display: none;">
         <a href="index.html#projects" class="menu__back">
-            <i class="fas fa-long-arrow-alt-left"></i>
+            <i class="fas fa-chevron-left"></i>
         </a>
     </header>
     <main style="display: none;">
