--- a/root/project-facebook.html
+++ b/root/project-facebook.html
@@ -36,7 +36,7 @@
             <div class="article__header">
                 <!-- code injected by js -->
                 <p>Down below screenshots taken from the project.</p>
-                <a href="#">live demo</a>
+                <a href="https://abdofola.github.io/Abdallah-Facebook-Site/#">live demo</a>
             </div><!-- .article__header -->
             <div class="article__body">
                 <figure class="slideshow">
