--- a/root/index.html
+++ b/root/index.html
@@ -75,8 +75,8 @@
                             <span class="home__name--last">Alkaser</span>
                         </h1>
                         <h2>Web Developer, Designer & Programmer</h2>
-                        <a href="#contact" data-id="contact" class="btn btn--contact">let's connect</a>
                         <a href="#projects" data-id="projects" class="btn btn--projects">see projects</a>
+                        <a href="#contact" data-id="contact" class="btn btn--contact">let's connect</a>
                     </div><!-- .left -->
                     <div class="right">
                         <div class="border-back"></div>
@@ -107,9 +107,8 @@
                     <div class="about__bio">
                         <h2 class="text-secondary">BIO</h2>
                         <p>After earning my Bachlor degree in Software-Engineering from Sudan University, I entered the Programming world
-                             to explore my passion for Software, Programming languages, and Designing. Currently, I work as an Odoo developer for
-                              App-script, where I'm focused on software production, solving technical problems, and team play.
-                               Further more I work as a front-end developer freelancer to deliver incredible websites.
+                             to explore my passion for Software, Programming languages, and Designing. Currently, I work as a Full-stack developer freelancer, where I'm focused on software production, solving technical and functional problems, collaberate with clients; to come up with software that serves as a value.
+                               
                         </p>
                         <div class="header-cue" id="cue">
                             <i class="header-cue__icon far fa-hand-point-down"></i>
